--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/api/v1
 #server.address = 192.168.56.1
 
 #Mysql config
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.url=jdbc:mysql://localhost:3306/jobo
 #spring.datasource.username=root
 #spring.datasource.password=letmein
